bin_PROGRAMS = vdebuglog
vdebuglog_SOURCES = vdebuglog.C VestaLog.H VestaLogPrivate.H
vdebuglog_LDADD = ../libs/libVestaLog.a/libVestaLog.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasics.a/libBasics.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ -lpthread -lm -lc
INCLUDES = -I../libs/libVestaLog.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasics.a -I../libs/libpcre
