bin_PROGRAMS = vestaeval
vestaeval_SOURCES = ApplyCache.C Debug.C Dep.C Driver.C Err.C EvalBasics.C Expr.C Files.C Lex.C ModelState.C Parser.C Pickle.C Prim.C PrimRunTool.C RunToolHost.C ThreadData.C ToolDirectoryServer.C VASTi.C Val.C Timing.C MemStats.C DepMergeOptimizer.C Version.C ApplyCache.H Debug.H Dep.H Err.H EvalBasics.H Expr.H Files.H Lex.H ListT.H Location.H ModelState.H Timing.H Parser.H Pickle.H Prim.H PrimRunTool.H RunToolHost.H ThreadData.H ToolDirectoryServer.H VASTi.H Val.H ValExpr.H WordKey.H Signal.H DepMergeOptimizer.H
vestaeval_LDADD = ../libs/libParseImports.a/libParseImports.a ../libs/libVestaRunTool.a/libVestaRunTool.a ../libs/libVestaCacheClient.a/libVestaCacheClient.a ../libs/libVestaCacheCommon.a/libVestaCacheCommon.a ../libs/libVestaReplicator.a/libVestaReplicator.a ../libs/libVestaReposUI.a/libVestaReposUI.a ../libs/libVestaReposLeaf.a/libVestaReposLeaf.a ../libs/libVestaFP.a/libVestaFP.a ../libs/libVestaLog.a/libVestaLog.a ../libs/libVestaSRPC.a/libVestaSRPC.a ../libs/libVestaConfig.a/libVestaConfig.a ../libs/libz.a/libz.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasicsGC.a/libBasicsGC.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ ../libs/libgcthrd/libgc.la -lpthread -lm -lc
INCLUDES = -I../libs/libParseImports.a -I../libs/libVestaRunTool.a -I../libs/libVestaCacheClient.a -I../libs/libVestaCacheCommon.a -I../libs/libVestaReplicator.a -I../libs/libVestaReposUI.a -I../libs/libVestaReposLeaf.a -I../libs/libVestaFP.a -I../libs/libVestaLog.a -I../libs/libVestaSRPC.a -I../libs/libVestaConfig.a -I../libs/libz.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasicsGC.a -I../libs/libpcre -I../libs/libgcthrd -I../libs/libgcthrd/include
