bin_PROGRAMS = vreposmonitor
vreposmonitor_SOURCES = vreposmonitor.C 
vreposmonitor_LDADD = ../libs/libVestaReposLeaf.a/libVestaReposLeaf.a ../libs/libVestaFP.a/libVestaFP.a ../libs/libVestaLog.a/libVestaLog.a ../libs/libVestaSRPC.a/libVestaSRPC.a ../libs/libVestaConfig.a/libVestaConfig.a ../libs/libz.a/libz.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasics.a/libBasics.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ -lpthread -lm -lc
INCLUDES = -I../libs/libVestaReposLeaf.a -I../libs/libVestaFP.a -I../libs/libVestaLog.a -I../libs/libVestaSRPC.a -I../libs/libVestaConfig.a -I../libs/libz.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasics.a -I../libs/libpcre
