bin_PROGRAMS = TestAllocatorGC
TestAllocatorGC_SOURCES = TestAllocator.C 
TestAllocatorGC_LDADD = ../libs/libBasicsGC.a/libBasicsGC.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ ../libs/libgcthrd/libgc.la -lpthread -lm -lc
INCLUDES = -I../libs/libBasicsGC.a -I../libs/libpcre -I../libs/libgcthrd -I../libs/libgcthrd/include
