bin_PROGRAMS = TestBigLog
TestBigLog_SOURCES = TestBigLog.C 
TestBigLog_LDADD = ../libs/libVestaLog.a/libVestaLog.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasics.a/libBasics.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ -lpthread -lm -lc
INCLUDES = -I../libs/libVestaLog.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasics.a -I../libs/libpcre
