bin_PROGRAMS = TestCharsSeq
TestCharsSeq_SOURCES = TestCharsSeq.C 
TestCharsSeq_LDADD = ../libs/libVestaSRPC.a/libVestaSRPC.a ../libs/libVestaConfig.a/libVestaConfig.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasics.a/libBasics.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ -lpthread -lm -lc
INCLUDES = -I../libs/libVestaSRPC.a -I../libs/libVestaConfig.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasics.a -I../libs/libpcre
