bin_PROGRAMS = TestConfig
TestConfig_SOURCES = TestConfig.C 
TestConfig_LDADD = ../libs/libVestaConfig.a/libVestaConfig.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasics.a/libBasics.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ -lpthread -lm -lc
INCLUDES = -I../libs/libVestaConfig.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasics.a -I../libs/libpcre
