bin_PROGRAMS = TestFlushQueue
TestFlushQueue_SOURCES = FlushQueue.C TestFlushQueue.C FlushQueue.H
TestFlushQueue_LDADD = ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasicsGC.a/libBasicsGC.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ ../libs/libgcthrd/libgc.la -lpthread -lm -lc
INCLUDES = -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasicsGC.a -I../libs/libpcre -I../libs/libgcthrd -I../libs/libgcthrd/include
