bin_PROGRAMS = TestIntSTbl
TestIntSTbl_SOURCES = TestIntSharedTbl.C 
TestIntSTbl_LDADD = ../libs/libGenerics.a/libGenerics.a ../libs/libBasicsGC.a/libBasicsGC.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ ../libs/libgcthrd/libgc.la -lpthread -lm -lc
INCLUDES = -I../libs/libGenerics.a -I../libs/libBasicsGC.a -I../libs/libpcre -I../libs/libgcthrd -I../libs/libgcthrd/include
