bin_PROGRAMS = TestIntTbl
TestIntTbl_SOURCES = TestIntTbl.C 
TestIntTbl_LDADD = ../libs/libGenerics.a/libGenerics.a ../libs/libBasics.a/libBasics.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ -lpthread -lm -lc
INCLUDES = -I../libs/libGenerics.a -I../libs/libBasics.a -I../libs/libpcre
