bin_PROGRAMS = TestLimService
TestLimService_SOURCES = TestLimService.C 
TestLimService_LDADD = ../libs/libVestaSRPC.a/libVestaSRPC.a ../libs/libVestaConfig.a/libVestaConfig.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasics.a/libBasics.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ -lpthread -lm -lc
INCLUDES = -I../libs/libVestaSRPC.a -I../libs/libVestaConfig.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasics.a -I../libs/libpcre
