bin_PROGRAMS = TestLimServiceGC
TestLimServiceGC_SOURCES = TestLimService.C 
TestLimServiceGC_LDADD = ../libs/libVestaSRPC.a/libVestaSRPC.a ../libs/libVestaConfig.a/libVestaConfig.a ../libs/libOS.a/libOS.a ../libs/libGenerics.a/libGenerics.a ../libs/libBasicsGC.a/libBasicsGC.a ../libs/libpcre/libpcreposix.la ../libs/libpcre/libpcre.la -lstdc++ ../libs/libgcthrd/libgc.la -lpthread -lm -lc
INCLUDES = -I../libs/libVestaSRPC.a -I../libs/libVestaConfig.a -I../libs/libOS.a -I../libs/libGenerics.a -I../libs/libBasicsGC.a -I../libs/libpcre -I../libs/libgcthrd -I../libs/libgcthrd/include
